# discord-guild-bot

./: .gitignore  README.md  docker-compose.yaml
docker/dev/: Dockerfile
operators/: timer.py
python_ws/: main.py  pyproject.toml
python_ws/components/operators/: __init__.py  classic_manuscript_parser.py  config_loader.py
python_ws/components/reaction/: __init__.py  quote.py
python_ws/data_structure/: __init__.py  manuscripts.py  members.py  parameters.py
python_ws/test/components/reaction/: test_quote.py
python_ws/test/data_structure/: test_manuscripts.py  test_parameters.py
scripts/: entrypoint.sh
