[project]
name = "python-ws"
version = "0.1.0"
description = "TB guild bot"
requires-python = ">=3.12"
dependencies = [
    "pyyaml>=6.0",
    "pytest>=8.0.0",
    "typer>=0.24.1",
    "black>=26.3.1",
    "isort>=8.0.1",
    "discord-py>=2.7.1",
    "python-dotenv>=1.2.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
